# bangla-postagger

./: README.md  pyproject.toml
bangla_postagger/: bn_en_mapper.py  en_postaggers.py  translators.py
tests/: test_bangla_postagger.py
